added bug item